# LiteFX

./: .doxyfile  .editorconfig  .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  dependencies.sh  write-version.ps1
src/: .clang-tidy  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  vcpkg-configuration.json  vcpkg.json
src/AppModel/: .natvis  CMakeLists.txt
src/AppModel/include/litefx/: app.hpp  app_api.hpp  app_formatters.hpp
src/AppModel/src/: app.cpp  app_builder.cpp  appversion.cpp
src/Backends/DirectX12/: .natvis  CMakeLists.txt  Readme.md
src/Backends/DirectX12/shaders/: blit.hlsl  blit.hlsli  blit_srgb.hlsl
src/Backends/DirectX12/src/: adapter.cpp  backend.cpp  barrier.cpp  blas.cpp  buffer.cpp  buffer.h  command_buffer.cpp  compute_pipeline.cpp  constant_buffer.cpp  convert.cpp  debug.hpp  descriptor_layout.cpp  descriptor_set.cpp  descriptor_set_layout.cpp  device.cpp  factory.cpp  frame_buffer.cpp  image.cpp  image.h  index_buffer.cpp  index_buffer_layout.cpp  input_assembler.cpp  input_attachment_mapping.cpp  pipeline.cpp  pipeline_layout.cpp  push_constants_layout.cpp  push_constants_range.cpp  queue.cpp  rasterizer.cpp  ray_tracing_pipeline.cpp  render_pass.cpp  render_pass_dependency.cpp  render_pipeline.cpp  runtime_object.cpp  shader_module.cpp  shader_program.cpp  surface.cpp  swapchain.cpp  tlas.cpp  vertex_buffer.cpp  (+3 more)
src/Backends/Vulkan/: .natvis  CMakeLists.txt  Readme.md
src/Backends/Vulkan/src/: Vulkan.cpp  adaper.cpp  backend.cpp  backend_builder.cpp  barrier.cpp  (+49 more)
src/Core/: .natvis  CMakeLists.txt  config.tmpl  core.tmpl  header.tmpl  version.tmpl
src/Core/modules/: alias.ixx  builder.ixx  concepts.ixx  core.ixx  enumerable.ixx  exceptions.ixx  pimpl.ixx  resource.ixx  string.ixx
src/Core/src/: Application.cpp  app.cpp  appversion.cpp  core.cpp  generator.hpp
src/Graphics/: .natvis  CMakeLists.txt
src/Graphics/shaders/: blit.hlsl
src/Graphics/src/: blitter_d3d12.cpp  blitter_vk.cpp  vertex.cpp
src/Logging/: CMakeLists.txt
src/Logging/src/: console.cpp  logger.cpp  logger_factory.cpp  rolling_file.cpp  termination.cpp
src/Math/: .natvis  CMakeLists.txt
src/Math/src/: matrix.cpp  rect.cpp  size.cpp  vector.cpp
src/Modules/overlay-triplets/: x64-linux-rel.cmake  x64-linux-static-rel.cmake  x64-linux-static.cmake  x64-linux.cmake  x64-mingw-rel.cmake  x64-mingw-static-rel.cmake  x64-mingw-static.cmake  x64-mingw.cmake  x64-windows-static-rel.cmake  x64-windows-static.cmake  x64-windows.cmake  x86-linux-rel.cmake  x86-linux-static-rel.cmake  x86-linux-static.cmake  x86-linux.cmake  x86-mingw-rel.cmake  x86-mingw-static-rel.cmake  x86-mingw-static.cmake  x86-mingw.cmake  x86-windows-rel.cmake  x86-windows-static-rel.cmake  x86-windows-static.cmake
src/Rendering/: .natvis  CMakeLists.txt
src/Rendering/src/: adapter.cpp  backend.cpp  buffer.cpp  buffer_attribute.cpp  buffer_layout.cpp  buffer_set.cpp  constant_buffer.cpp  convert.cpp  depth_stencil_state.cpp  descriptor_layout.cpp  device.cpp  device_builder.cpp  device_state.cpp  image.cpp  index_buffer.cpp  input_assembler.cpp  input_attachment_mapping.cpp  pipeline.cpp  pipeline_builder.cpp  pipeline_layout.cpp  pool.cpp  queue.cpp  rasterizer.cpp  render.cpp  render_pass_dependency.cpp  render_target.cpp  rendering.cpp  sampler.cpp  scissor.cpp  shader_record_collection.cpp  state_resource.cpp  surface.cpp  texture.cpp  timing_event.cpp  vertex_buffer.cpp  viewport.cpp
src/Samples/: README.md  config.tmpl
src/Samples/BasicRendering/: CMakeLists.txt  Readme.md
src/Samples/Bindless/: CMakeLists.txt
src/Samples/Compute/: CMakeLists.txt
src/Samples/DeferredShading/: CMakeLists.txt  Readme.md
src/Samples/Defragmentation/: CMakeLists.txt
src/Samples/DynamicDescriptors/: CMakeLists.txt
src/Samples/ImGui/: CMakeLists.txt
src/Samples/Indirect/: CMakeLists.txt
src/Samples/MeshShader/: CMakeLists.txt
src/Samples/Multisampling/: CMakeLists.txt
src/Samples/Multithreading/: CMakeLists.txt
src/Samples/PushConstants/: CMakeLists.txt
src/Samples/RayQueries/: CMakeLists.txt
src/Samples/RayTracing/: CMakeLists.txt
src/Samples/RenderPasses/: CMakeLists.txt
src/Samples/ResourceAliasing/: CMakeLists.txt
src/Samples/Textures/: CMakeLists.txt  Readme.md
src/Samples/UniformArrays/: CMakeLists.txt
src/Tests/: CMakeLists.txt  README.md  TestHelpers.cmake
src/Tests/Backends.D3D12/: CMakeLists.txt  alloc_buffer.cpp  alloc_descriptor_set.cpp  alloc_image.cpp  alloc_index_buffer.cpp  alloc_vertex_buffer.cpp  app_init.cpp  common.h  conservative_rasterization.cpp  create_frame_buffer.cpp  create_render_pass.cpp  create_render_pipeline.cpp  create_shader_program.cpp  input_assembler.cpp  map_frame_buffer_render_target.cpp  partial_scissor_rect.cpp  rasterizer.cpp  reflect_dynamic_descriptors.cpp  reflect_render_pipeline.cpp  reset_swap_chain.cpp  resize_frame_buffer.cpp  setup_acceleration_structure.cpp  setup_compute_pipeline.cpp  setup_push_constants.cpp  setup_raytracing_pipeline.cpp
src/Tests/Backends.Vk/: CMakeLists.txt  alloc_buffer.cpp  alloc_descriptor_set.cpp  alloc_image.cpp  alloc_index_buffer.cpp  alloc_vertex_buffer.cpp  app_init.cpp  common.h  conservative_rasterization.cpp  create_frame_buffer.cpp  create_render_pass.cpp  create_render_pipeline.cpp  create_shader_program.cpp  input_assembler.cpp  map_frame_buffer_render_target.cpp  rasterizer.cpp  reflect_dynamic_descriptors.cpp  reflect_render_pipeline.cpp  reset_swap_chain.cpp  resize_frame_buffer.cpp  setup_acceleration_structure.cpp  setup_compute_pipeline.cpp  setup_push_constants.cpp  setup_raytracing_pipeline.cpp
src/Tests/Core.Enumerable/: CMakeLists.txt  common.h  references.cpp  return_values.cpp  shared_ptrs.cpp  trivial.cpp  unique_ptrs.cpp
src/cmake/: Assets.cmake  AutoVcpkg.cmake  Config.cmake  LiteFXConfig-version.cmake  LiteFXConfig.cmake  Modules.cmake  Options.cmake  Readme.md  Shaders.cmake  VERSION  Version.cmake  VersionVariables.cmake  write-version.ps1
src/cmake/presets/: compilers.json  platforms.json
(+2355 files in other folders)
